# PinguBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yml  Dockerfile  Procfile  README.md  bot.py  build.sh  createImage.sh  data.py  docker-compose.local.yml  docker-compose.yml  pingu.py  pyproject.toml  requirements.txt  settings.py  setup.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql-config.yml  docker-publish.yml
cogs/: 1234.py  admin.py  alert.py  alert1234.py  auto.py  clown.py  help.py  misc.py  miscellaneous.py  music.py  schedules.py
common/: exception.py  settings.py  utils.py
database/: template.sql
db/: Dockerfile  models.py  setup.sql
lavalink/: Dockerfile  application.yml
models/: __init__.py
scripts/: createImage.sh  setup.sh  start.sh
