[tool.poetry]
name = "pingubot"
version = "2.3"
description = ""
authors = ["nootify"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
python-dotenv = "^1.0.1"
"discord.py" = {extras = ["voice"], version = "^2.4.0"}
jishaku = "^2.5.2"
wavelink = "^3.4.0"
psutil = "^6.0.0"
pytz = "^2024.1"
pytimeparse = "^1.1.8"
SQLAlchemy = "^2.0.31"
asyncpg = "^0.29.0"
arrow = "^1.3.0"
humanize = "^4.9.0"
playwright = "^1.45.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
